--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Code Journal</title>
+  <title>Calculator</title>
   <link rel="icon" href="images/favicon.ico">
   <link
     rel="stylesheet"
@@ -24,7 +24,6 @@
     <div data-view="entry-form"></div>
     <div data-view="entries" class="hidden"></div>
   </main>
-  <script src="js/data.js"></script>
-  <script src="js/main.js"></script>
+  <script src="public/js/index.js"></script>
 </body>
 </html>
