--- a/index.html
+++ b/index.html
@@ -11,8 +11,34 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1 class="font-check">Hello World</h1>
-  <h2 class="font-second">0123456789</h2>
+  <div class="calculator">
+    <div class="screen"></div>
+    <div class="button-container">
+      <button type="button" class="all-clear" value="all-clear">AC</button>
+      <button type="button" class="clear" value="clear">CE</button>
+      <button type="button" class="operator" value="%">&#37;</button>
+      <button type="button" class="operator" value="/">&divide;</button>
+
+      <button type="button" value="7">7</button>
+      <button type="button" value="8">8</button>
+      <button type="button" value="9">9</button>
+      <button type="button" class="operator" value="*">&times;</button>
+
+      <button type="button" value="4">4</button>
+      <button type="button" value="5">5</button>
+      <button type="button" value="6">6</button>
+      <button type="button" class="operator" value="-">-</button>
+
+      <button type="button" value="1">1</button>
+      <button type="button" value="2">2</button>
+      <button type="button" value="3">3</button>
+      <button type="button" class="operator plus-sign" value="+">+</button>
+
+      <button type="button" value="0">0</button>
+      <button type="button" class="decimal" value=".">.</button>
+      <button type="button" class="equal-sign" value="=">=</button>
+    </div>
+  </div>
   <script src="public/js/index.js"></script>
 </body>
 </html>
