Styled buttons based on image of older calculator

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <div class="calculator">
     <div class="screen"></div>
     <div class="button-container">
-      <button type="button" class="all-clear" value="all-clear">AC</button>
-      <button type="button" class="clear" value="clear">CE</button>
+      <button type="button" class="all-clear clear" value="all-clear">AC</button>
+      <button type="button" class="clear-entry clear" value="clear-entry">CE</button>
       <button type="button" class="operator" value="%">&#37;</button>
       <button type="button" class="operator" value="/">&divide;</button>
 
