Styled screen to display numbers and body of calculator

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
   <div class="calculator">
-    <div class="screen"></div>
+    <div class="screen">
+      <p class="display">0123456789</p>
+    </div>
     <div class="button-container">
       <button type="button" class="all-clear clear" value="all-clear">AC</button>
       <button type="button" class="clear-entry clear" value="clear-entry">CE</button>
