--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="calculator">
     <div class="screen">
-      <p class="display">0123456789</p>
+      <p class="display"></p>
     </div>
     <div class="button-container">
       <button type="button" class="all-clear clear" value="all-clear">AC</button>
