--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
       <button type="button" class="operator" value="%">&#37;</button>
       <button type="button" class="operator" value="/">&divide;</button>
 
-      <button type="button" value="7">7</button>
-      <button type="button" value="8">8</button>
-      <button type="button" value="9">9</button>
+      <button type="button" class="num" value="7">7</button>
+      <button type="button" class="num" value="8">8</button>
+      <button type="button" class="num" value="9">9</button>
       <button type="button" class="operator" value="*">&times;</button>
 
-      <button type="button" value="4">4</button>
-      <button type="button" value="5">5</button>
-      <button type="button" value="6">6</button>
+      <button type="button" class="num" value="4">4</button>
+      <button type="button" class="num" value="5">5</button>
+      <button type="button" class="num" value="6">6</button>
       <button type="button" class="operator" value="-">-</button>
 
-      <button type="button" value="1">1</button>
-      <button type="button" value="2">2</button>
-      <button type="button" value="3">3</button>
+      <button type="button" class="num" value="1">1</button>
+      <button type="button" class="num" value="2">2</button>
+      <button type="button" class="num" value="3">3</button>
       <button type="button" class="operator plus-sign" value="+">+</button>
 
-      <button type="button" value="0">0</button>
-      <button type="button" class="decimal" value=".">.</button>
+      <button type="button" class="num" value="0">0</button>
+      <button type="button" class="num" value=".">.</button>
       <button type="button" class="equal-sign" value="=">=</button>
     </div>
   </div>
