Created function to positive or negative and cleaned equals function to display scientific notation

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
   <div class="calculator">
     <div class="screen">
-      <p class="display"></p>
+      <p class="display">0</p>
     </div>
     <div class="button-container">
       <button type="button" class="all-clear clear" value="all-clear">AC</button>
       <button type="button" class="clear-entry clear" value="clear-entry">CE</button>
-      <button type="button" class="operator" value="%">&#37;</button>
+      <button type="button" class="negative" value="±">±</button>
       <button type="button" class="operator" value="/">&divide;</button>
 
       <button type="button" class="num" value="7">7</button>
